Add function to parse a movies list and search torrents of released items

--- a/config/conf.yml.example
+++ b/config/conf.yml.example
@@ -11,6 +11,6 @@ t411:
     site_specific_kw:
         movies: ''
 trakt:
-    apikey: apikey
-    username: username
-    password: pwd
+    account_id: account_id
+    client_id: client_id
+    client_secret: client_secret
