--- a/config/conf.yml.example
+++ b/config/conf.yml.example
@@ -2,6 +2,17 @@ deluge:
     host: host
     username: username
     password: password
+email:
+    host: host
+    port: 587
+    domain: example.com
+    username: username
+    password: pwd
+    auth_type: plain
+    notification_from: 'noreply@sender.com'
+    notification_to: 'noreply@recipient.com'
+    notification_cc: ''
+    notification_bcc: ''
 imdb:
     user: user
     list: list
