--- a/config/templates/fetch_media_box.yml.example
+++ b/config/templates/fetch_media_box.yml.example
@@ -2,6 +2,7 @@ local_folder: '/local/folder'
 remote_user: user
 remote_server: hostname.com
 remote_folder: 'remote/folder'
+port: ''
 reverse_folder:
   - '/folder/to/sync/from/local/to/remote'
 move_if_finished:
