--- a/config/templates/fetch_media_box.yml.example
+++ b/config/templates/fetch_media_box.yml.example
@@ -4,7 +4,7 @@ remote_server: hostname.com
 remote_folder: 'remote/folder'
 ssh_opts:
   port: 22
-  i: 'path/to/identity/file'
+  keys: 'path/to/identity/file'
 reverse_folder:
   - '/folder/to/sync/from/local/to/remote'
 move_if_finished:
