Refactor tv monitor function and deal with duplicates when handling completed download

--- a/config/templates/handle_completed_download.yml.example
+++ b/config/templates/handle_completed_download.yml.example
@@ -2,6 +2,7 @@ torrent_path: '/path/to/torrent/'
 torrent_name: 'torrentname'
 completed_folder: '/download/folder/'
 destination_folder: '/move/to/folder/'
+remove_duplicates: 0
 handling:
   file_types:
     - avi
