harmonize tv and shows mention

--- a/config/conf.yml.example
+++ b/config/conf.yml.example
@@ -22,7 +22,7 @@ kodi:
   password: password
 thepiratebay:
   site_specific_kw:
-      tv: ''
+      shows: ''
 extratorrent:
   site_specific_kw:
       movies: ''
