--- a/config/templates/process_folder.yml.example
+++ b/config/templates/process_folder.yml.example
@@ -1,4 +1,4 @@
-type: tv
+type: shows
 folder: /home/folder/to/process
 item_name: 'optional - only treat this title (series or movies'
 remove_duplicates: 0
@@ -11,9 +11,9 @@ replace:
 rename:
   rename_media: 0
   destination:
-    tv: '/home/user/tv/{{ series_name }}/Season {{ episode_season }}/{{ series_name|titleize|nospace }}.{{ episode_numbering|nospace }}.{{ episode_name|titleize|nospace }}.{{ quality|downcase|nospace }}.{{ proper|downcase }}'
+    shows: '/home/user/tv/{{ series_name }}/Season {{ episode_season }}/{{ series_name|titleize|nospace }}.{{ episode_numbering|nospace }}.{{ episode_name|titleize|nospace }}.{{ quality|downcase|nospace }}.{{ proper|downcase }}'
     movies: '/home/user/Movies/{{ movies_name }}/{{ movies_name|titleize|nospace }}.{{ quality|downcase|nospace }}.{{ proper|downcase }}'
 filter_criteria:
 folder_hierarchy:
-  tv: 2
+  shows: 2
   movies: 1
