--- a/config/templates/process_search_list.ym.example
+++ b/config/templates/process_search_list.ym.example
@@ -1,7 +1,8 @@
 dest_folder: /folder/to/download/to
-source: 'trakt'
+source:
+  site: 'trakt'
+  list_name: 'watchlist'
 no_prompt: 0
-type: 'trakt'
 extra_keywords: ''
 qualities:
   min_quality: 720p hdtv
