--- a/config/templates/process_folder.yml.example
+++ b/config/templates/process_folder.yml.example
@@ -12,7 +12,7 @@ rename:
   rename_media: 0
   destination:
     shows: '/home/user/tv/{{ series_name }}/Season {{ episode_season }}/{{ series_name|titleize|nospace }}.{{ episode_numbering|nospace }}.{{ episode_name|titleize|nospace }}.{{ quality|downcase|nospace }}.{{ proper|downcase }}'
-    movies: '/home/user/Movies/{{ movies_name }}/{{ movies_name|titleize|nospace }}.{{ quality|downcase|nospace }}.{{ proper|downcase }}'
+    movies: '/home/user/Movie/{{ movies_name }}/{{ movies_name|titleize|nospace }}.{{ quality|downcase|nospace }}.{{ proper|downcase }}'
 search_missing:
   search_missing: 1
   delta: 10
