Lock process_folder function by arguments and share media list variable Group missing episodes by season if whole season is missing Introduce language qualities Add keyword "target_quality" instead of assuming max quality = target Distinguish season pack and download if season episode not found and replace existing season with it Use "assume_quality" keyword to assume a quality (for example: assume "language = eng" if no language in name) Parse split movies files Introduce target size for better file picking Replace thread wait sleep by callbacks blocks to avoid using "sleep" and wasting CPU ressources
Various fixes and optimizations

--- a/config/templates/search_from_torrents.yml.example
+++ b/config/templates/search_from_torrents.yml.example
@@ -33,10 +33,14 @@ category: shows
 no_prompt: 0
 qualities:
   min_quality: 720p hdtv
-  max_quality: 1080p
+  max_quality: 2160p
+  target_quality: 1080p
+  assume_quality: vo
+  timeframe: 1 hour
   min_size: 100
   max_size: 3000
-  timeframe: 1 hour
+  target_size: 8000
+  timeframe_size: 96 hours
 download_criteria:
   rename_main: 'rename file'
   main_only: 0
