Reload daemon from command line Remove duplicates when handling newly downloaded files Add a flag "upgrade" for torrent search list, allowing the program to look for and replace existing media files with better quality ones Minor fixes

--- a/config/templates/search_from_torrents.yml.example
+++ b/config/templates/search_from_torrents.yml.example
@@ -20,6 +20,7 @@ filter_sources:
       days_newer:
       days_older:
     delta: 10
+    upgrade: 1 #if '1', will try to download episodes of better qualities if available
   search:
     keywords:
       - 'keyword'
@@ -28,6 +29,7 @@ filter_sources:
     list_name: 'watchlist'
     include_specials: 1 #For tv shows
     delta: 10
+    upgrade: 1 #if '1', will try to download episodes of better qualities if available
     existing_folder:
       movies: '/folder/of/movies'
       shows: '/folder/of/tvseries'
