Add TMDB as movie lookup source List missing movies from movies set Convert FLAC files to mp3 Parallel processing of certains tasks in daemon mode Minor fixes and optimizations

--- a/config/templates/handle_completed_download.yml.example
+++ b/config/templates/handle_completed_download.yml.example
@@ -8,7 +8,7 @@ handling:
     - avi
     - mkv
     - pdf:
-        convert_comics: cbz
+        convert_to: cbz
   shows:
     media_type: shows
     move_to: '/home/user/TV_Shows/{{ series_name }}/Season {{ episode_season }}/{{ series_name|titleize|nospace }}.{{ episode_numbering|nospace }}.{{ episode_name|titleize|nospace }}.{{ quality|downcase|nospace }}.{{ proper|downcase }}'
