--- a/config/conf.yml.example
+++ b/config/conf.yml.example
@@ -37,6 +37,8 @@ trakt:
   account_id: account_id
   client_id: client_id
   client_secret: client_secret
+tmdb:
+  api_key: api_key
 tvdb:
   api_key: api_key
 yggtorrent:
