Add the possibility to exclude toorents if they do not contains expected (whitelisted) extensions Add option to discard timeframe wait time Various bugfixes

--- a/config/templates/search_from_torrents.yml.example
+++ b/config/templates/search_from_torrents.yml.example
@@ -53,6 +53,11 @@ download_criteria:
   rename_main: 'rename file'
   main_only: 0
   add_paused: 1
+  whitelisted_extensions:
+    video:
+      - avi
+    books:
+      - cbr
   destination:
     shows: '/home/user/tv/{{ series_name }}/Season {{ episode_season }}'
     movies: '/home/user/Movie/'
