Ensure movie year is the same as on imdb Detect multi seasons pack Various fixes

--- a/config/templates/search_from_torrents.yml.example
+++ b/config/templates/search_from_torrents.yml.example
@@ -53,6 +53,7 @@ download_criteria:
   rename_main: 'rename file'
   main_only: 0
   add_paused: 1
+  queue: bottom #one of 'top' or 'bottom', default is 'bottom'
   whitelisted_extensions:
     video:
       - avi
