Fix bug preventing filtering by size when not series Automatically convert HDR videos to SDR Fix bug with trakt refresh

--- a/config/templates/handle_completed_download.yml.example
+++ b/config/templates/handle_completed_download.yml.example
@@ -6,7 +6,8 @@ remove_duplicates: 0
 handling:
   file_types:
     - avi
-    - mkv
+    - mkv:
+        no_hdr: 0 #If 1, will convert HDR movies to SDR
     - pdf:
         convert_to: cbz
   shows:
