Bugfix identification tv episode numbering Bugfix for downloaded torrents followup Bugfix for initializing new log files Improve debug information logging Bugfix sending command to Deluge Improve handling dowwnloaded HDR files, with the option to keep original file alongside new converted file Bugfix handling downloaded episodes when no information on TV Shows is found Remove torrents and data from inside the application once completed Timeframe wait time counts from torrent creation date rather than when first seen by the program Save jobs from chosen queue(s) to disk, to be launched after a daemon restart Fix in qualities sorting when several qualities of same type are in the same filename Upgrade processfolder function to filter out some files managed by other programs (like Plex) Detect qualities of file from the file itself rather than from its name to ensure accurate qualities in the filename Remove torrents not yet downloaded if a better one is found Increase the priority of language when sorting quality of files/torrents Take into account movies original language to decide on language

--- a/config/conf.yml.example
+++ b/config/conf.yml.example
@@ -8,6 +8,10 @@ deluge:
   host: host
   username: username
   password: password
+  remove_on_completion: 1
+  max_download_rate: 4000 #In kbps
+  min_torrent_free_space: 10
+  default_seed_time: 1
 email:
   host: host
   port: 587
