--- a/config/templates/handle_completed_download.yml.example
+++ b/config/templates/handle_completed_download.yml.example
@@ -14,5 +14,5 @@ handling:
     move_to: '/home/user/TV_Shows/{{ series_name }}/Season {{ episode_season }}/{{ series_name|titleize|nospace }}.{{ episode_numbering|nospace }}.{{ episode_name|titleize|nospace }}.{{ quality|downcase|nospace }}.{{ proper|downcase }}'
   movies:
     media_type: movies
-    no_hdr: 0 #If 1, will convert HDR movies to SDR
+    no_hdr: 0 #If 1, will convert HDR movies to SDR, if 2, will keep HDR movies along side SDR
     move_to: '/home/user/Movie/{{ movies_name }}/{{ movies_name|titleize|nospace }}.{{ quality|downcase|nospace }}.{{ proper|downcase }}'
