--- a/config/templates/search_from_torrents.yml.example
+++ b/config/templates/search_from_torrents.yml.example
@@ -18,6 +18,7 @@ filter_sources:
     filter_criteria:
       days_newer:
       days_older:
+    item_name: '' #If set, will only look for files containing this string
     delta: 10
     upgrade: 1 #if '1', will try to download episodes of better qualities if available
     get_missing_set: 1 #If '1', will look for missing movies from a given set
