Adjust video resolution detection Fix bug in video conversion with ffmpeg Fix removal of lower qualities torrents Kill a job with job ID Do not count locked out job as active jobs Handle better languages of media files

--- a/config/templates/handle_completed_download.yml.example
+++ b/config/templates/handle_completed_download.yml.example
@@ -2,8 +2,10 @@ torrent_path: '/path/to/torrent/'
 torrent_name: 'torrentname'
 completed_folder: '/download/folder/'
 destination_folder: '/move/to/folder/'
-move_completed_torrent: '/move/torrent/files/to/folder' #Optional, if set, will move the completed torrent to another folder within the torrent client
-move_completed_destination_folder: 'destination/folder/if/torrent/moved' #If set and torrent files are moved, will move files to this folder instead
+move_completed_torrent:
+  torrent_completed_path: '/move/torrent/files/to/folder' #Optional, if set, will move the completed torrent to another folder within the torrent client
+  replace_destination_folder: 'destination/folder/if/torrent/moved' #If set, replace destination_folder
+  completed_torrent_local_cache: 'destination/folder/cache' #If set and torrent files are moved, will move files to this folder instead of torrent_completed_path, even though the files moved will still be accessible in torrent_completed_path. The use case if for example using a mergerfs filesystem/ This allow to move quickly a file into this mergerfs filesystem, while accessing them by the regular mergerfs drive.
 remove_duplicates: 0
 handling:
   file_types:
