--- a/config/conf.yml.example
+++ b/config/conf.yml.example
@@ -24,6 +24,9 @@ email:
   notification_to: noreply@recipient.com
   notification_cc: ''
   notification_bcc: ''
+ffmpeg_settings:
+  crf: 22
+  preset: medium
 goodreads:
   api_key: api_key
   api_secret: api_secret
