Relying on Jackett for support to a growing number of trackers rather than built-in support with phantomjs Add function to convert iso to mkv Fix filtering of watched tv shows Ensure no runaway of jobs when they have high frequency and finish before their children Minor bugfixes

--- a/config/templates/search_from_torrents.yml.example
+++ b/config/templates/search_from_torrents.yml.example
@@ -63,3 +63,4 @@ download_criteria:
   destination:
     shows: '/home/user/tv/{{ series_name }}/Season {{ episode_season }}'
     movies: '/home/user/Movie/'
+grab_all: 0 #If set to 1, will grab all torrents results for a given search, not just the first
