--- a/config/templates/search_from_torrents.yml.example
+++ b/config/templates/search_from_torrents.yml.example
@@ -35,6 +35,15 @@ filter_sources:
     existing_folder:
       movies: '/folder/of/movies'
       shows: '/folder/of/tvseries'
+  lists:
+    list_name: 'watchlist'
+    include_specials: 1 #For tv shows
+    delta: 10
+    upgrade: 1 #if '1', will try to download episodes of better qualities if available
+    get_missing_set: 1 #If '1', will look for missing movies from a given set
+    existing_folder:
+      movies: '/folder/of/movies'
+      shows: '/folder/of/tvseries'
 category: shows
 search_category: optional_can_be_one_of_movies_shows_books_comics
 no_prompt: 0
