--- a/config/templates/search_from_torrents.yml.example
+++ b/config/templates/search_from_torrents.yml.example
@@ -42,6 +42,14 @@ filter_sources:
     existing_folder:
       movies: '/folder/of/movies'
       shows: '/folder/of/tvseries'
+  download_list:
+    # Loads entries from the DB-backed list (default: download_list) and optionally
+    # from a YAML file made of items with at least a `title` and `type` key.
+    list_name: 'download_list'
+    file_path: '/path/to/download_list.yml'
+    existing_folder:
+      movies: '/folder/of/movies'
+      shows: '/folder/of/tvseries'
 category: shows
 search_category: optional_can_be_one_of_movies_shows
 no_prompt: 0
