Add configurable calendar scheduler settings

--- a/config/templates/scheduler.yml.example
+++ b/config/templates/scheduler.yml.example
@@ -6,10 +6,8 @@ periodic:
     args:
   calendar_feed_refresh:
     command: calendar.refresh_feed
-    every: 12 hours
-    args:
-      days: 45
-      limit: 200
+    every: 12 hours # Overridden by conf.yml calendar.refresh_every
+    args: {}
 continuous:
   task1:
     command: library.fetch_media_box
