--- a/config/conf.yml.example
+++ b/config/conf.yml.example
@@ -28,6 +28,11 @@ ffmpeg_settings:
 imdb:
   user: user
   list: list
+calendar:
+  refresh_every: 12 hours
+  refresh_days: 45
+  refresh_limit: 200
+  providers: imdb|trakt|tmdb
 kodi:
   host: http://host:port
   username: username
