Add SSL context to Trakt HTTP fallback

--- a/config/conf.yml.example
+++ b/config/conf.yml.example
@@ -42,6 +42,8 @@ trakt:
   account_id: account_id # Used for metadata lookups; list automation is retired
   client_id: client_id
   client_secret: client_secret
+  ca_path: /path/to/ca-certificates # Optional override; defaults to system trust store
+  disable_crl_checks: false # Set to true only if your environment lacks CRL support
 tmdb:
   api_key: api_key
 tvdb:
