Expose tracker templates for watchlist links

--- a/config/trackers/tracker.yml
+++ b/config/trackers/tracker.yml
@@ -1,7 +1,8 @@
 api_url: torznab_api_url (not set if not a torznab tracker)
 api_key: torznab_api_key
+url_template: "https://tracker.example/search?title=%title%&year=%year%&imdb=%imdbid%"
 assume_quality: "vf" #Takes precedence on search qualities
 seed_time: 24
 site_specific_kw:
   movies: multi
-#This config is tracker specific
+# This config is tracker specific. url_template supports %title%, %year% and %imdbid% placeholders.
