--- a/config/api.yml.example
+++ b/config/api.yml.example
@@ -4,6 +4,8 @@ listen_port: 8888
 auth:
   username: admin
   password_hash: "$2a$12$REPLACE_WITH_BCRYPT_HASH"
+  # Optionnel : laissez vide pour une génération automatique dans ~/.medialibrarian/session_secret
+  session_secret:
 ssl_enabled: false
 ssl_certificate_path:
 ssl_private_key_path:
